<resources>
    <string name="app_name">Winderz Project</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="add_button">add button</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_session">Add Session</string>
    <string name="favorites">Favorites</string>
    <string name="title_of_session">Title of session</string>
    <string name="description_of_the_session">Description of the session</string>
    <string name="wind_speed">Wind Speed :</string>
    <string name="wave_size">Wave Size :</string>
    <string name="in_meter">in meter</string>
    <string name="in_kilometer_per_hour">in kilometer per hour</string>
    <string name="wind_orientation">Wind Orientation :</string>
    <string name="wave_frequency">Wave frequency :</string>
    <string name="in_herz">in herz</string>
    <string name="delete">delete</string>
    <string name="add">ADD</string>
    <string name="user_name">User name</string>
    <string name="email">email</string>
    <string name="sign_out">Sign out</string>
    <string name="first_name">First Name</string>
    <string name="fav">favorite : </string>
    <string name="time">Time :</string>
    <string name="in_minutes">in minutes</string>
    <string name="button">Button</string>
    <string name="log_in">Log in</string>
    <string name="change">change</string>
    <string name="cancel">cancel</string>
    <string name="update">update</string>
    <string name="wave_period">Wave period :</string>
    <string name="knots">knots</string>
    <string name="session_time">Session Time</string>
    <string name="knts">knts</string>
    <string name="n">N</string>
    <string name="wind">Wind</string>
    <string name="houle">Houle</string>
    <string name="hours">Hours :</string>
    <string name="minutes">Minutes :</string>
    <string name="sec">sec</string>
    <string name="last_name">Last Name</string>
    <string name="s">s</string>
    <string name="two_point">:</string>


    <string-array name="windOrientation">
        <item>Not specified</item>
        <item>North</item>
        <item>Northeast</item>
        <item>East</item>
        <item>Southeast</item>
        <item>South</item>
        <item>Southwest</item>
        <item>West</item>
        <item>Northwest</item>
    </string-array>

    <string-array name="waveSize">
        <item>Not specified</item>
        <item>Flat</item>
        <item>Choppy</item>
        <item>Small waves</item>
        <item>Big waves</item>
    </string-array>
</resources>