<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/map"
        android:title="@string/map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addSession"
        android:title=" "
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>