<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <EditText
        android:id="@+id/titleEdit"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:inputType="textPersonName"
        android:hint="@string/title_of_session"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:gravity="center"
        android:autofillHints="Title"/>

    <EditText
        android:layout_marginTop="16dp"
        android:id="@+id/descriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="textPersonName"
        android:hint="@string/description_of_the_session"
        android:textSize="16sp"
        android:autofillHints="description"
        android:gravity="top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp" />
        <EditText
            android:id="@+id/timeEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="description"
            android:hint="@string/in_minutes"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/WindSpeed"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp" />
        <EditText
            android:id="@+id/WindSpeedEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="description"
            android:hint="@string/in_kilometer_per_hour"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/WindOrientation"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/wind_orientation"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp" />

        <Spinner
            android:id="@+id/WindOrientationSpinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:hint="@string/in_kilometer_per_hour"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/waveSize"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/wave_size"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp" />
        <EditText
            android:id="@+id/waveSizeEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="description"
            android:hint="@string/in_meter"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/WaveFrequency"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/wave_frequency"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp" />
        <EditText
            android:id="@+id/WaveFrequencyEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="description"
            android:hint="@string/in_herz"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <Switch
            android:id="@+id/Favorite_switch"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:text="@string/favorite"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginRight ="50dp"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
    </LinearLayout>









</LinearLayout>